--- a/euajudo/Base.lproj/Main.storyboard
+++ b/euajudo/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
         </mutableArray>
     </customFonts>
     <scenes>
-        <!--Campaigns Collection View Controller-->
+        <!--Campanhas-->
         <scene sceneID="aEZ-3u-XPe">
             <objects>
                 <collectionViewController id="YjN-3S-qFd" customClass="CampaignsCollectionViewController" customModule="euajudo" customModuleProvider="target" sceneMemberID="viewController">
@@ -38,7 +38,7 @@
                             <outlet property="delegate" destination="YjN-3S-qFd" id="Pmc-hW-rCh"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="wRi-yd-rV4"/>
+                    <navigationItem key="navigationItem" title="Campanhas" id="wRi-yd-rV4"/>
                     <connections>
                         <segue destination="564-cH-uAu" kind="show" identifier="Campaign" id="Yx3-PI-viT"/>
                     </connections>
@@ -71,7 +71,7 @@
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="hId-XY-MSr"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="Lato-Semibold" family="Lato" pointSize="16"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Empresa responsável" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eV-LI-DyD">
@@ -95,7 +95,7 @@
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Anp-kc-T4z"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -388,7 +388,7 @@
         <!--View Controller-->
         <scene sceneID="Nmp-HC-vh0">
             <objects>
-                <viewController id="CQd-I0-Jvv" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="CQd-I0-Jvv" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5K9-PS-NYU"/>
                         <viewControllerLayoutGuide type="bottom" id="0vx-1z-Tbj"/>
@@ -396,12 +396,38 @@
                     <view key="view" contentMode="scaleToFill" id="cPa-kD-bDg">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lVh-Hi-GRc">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="are-pK-vY5" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="349"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="349" id="gOb-7J-4JQ"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="are-pK-vY5" firstAttribute="leading" secondItem="lVh-Hi-GRc" secondAttribute="leading" id="L2D-FY-fBc"/>
+                                    <constraint firstItem="are-pK-vY5" firstAttribute="width" secondItem="lVh-Hi-GRc" secondAttribute="width" id="aI8-rr-XoR"/>
+                                    <constraint firstAttribute="trailing" secondItem="are-pK-vY5" secondAttribute="trailing" id="mc8-Vn-v2p"/>
+                                    <constraint firstItem="are-pK-vY5" firstAttribute="top" secondItem="lVh-Hi-GRc" secondAttribute="top" id="ttO-rR-0wC"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lVh-Hi-GRc" firstAttribute="leading" secondItem="cPa-kD-bDg" secondAttribute="leading" id="Gbs-55-hlr"/>
+                            <constraint firstItem="lVh-Hi-GRc" firstAttribute="top" secondItem="5K9-PS-NYU" secondAttribute="bottom" id="M2f-Wu-vN6"/>
+                            <constraint firstItem="0vx-1z-Tbj" firstAttribute="top" secondItem="lVh-Hi-GRc" secondAttribute="bottom" id="U23-zZ-f7K"/>
+                            <constraint firstAttribute="trailing" secondItem="lVh-Hi-GRc" secondAttribute="trailing" id="eKq-JA-wqW"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JbB-ka-Cxi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1894" y="1565"/>
+            <point key="canvasLocation" x="1895" y="1565"/>
         </scene>
         <!--Base Navigation Controller-->
         <scene sceneID="8NF-W6-rU4">
